--- a/client/src/app/components/featured-books/featured-books/featured-books.component.html
+++ b/client/src/app/components/featured-books/featured-books/featured-books.component.html
@@ -30,7 +30,7 @@
     <ng-container matColumnDef="coverImage">
         <th mat-header-cell *matHeaderCellDef> Cover </th>
         <td mat-cell *matCellDef="let book">
-            <img src="{{ 'https://picsum.photos/55/75' }}" />
+            <img src="{{book?.coverImage}}/55/75" />
         </td>
     </ng-container>
     
@@ -43,7 +43,7 @@
     <!-- Available Column -->
     <ng-container matColumnDef="checkedOutUntil">
         <th mat-sort-header mat-header-cell *matHeaderCellDef> Available On </th>
-        <td mat-cell *matCellDef="let book"> {{ book?.checkedOutUntil ?? 'Now' }} </td>
+        <td mat-cell *matCellDef="let book"> {{ (book?.checkedOutUntil | date) ?? 'Now' }} </td>
     </ng-container>
     
     <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
