Add nav bar & styling updates

--- a/client/src/app/app.component.html
+++ b/client/src/app/app.component.html
@@ -1,3 +1,21 @@
+<mat-toolbar>
+    <span>Library App</span>
+    <span class="example-spacer"></span>
+    <button mat-icon-button
+            class="example-icon favorite-icon"
+            aria-label="Example icon-button with heart icon">
+        <mat-icon>search</mat-icon>
+    </button>
+    <button mat-icon-button
+            class="example-icon"
+            aria-label="Example icon-button with share icon">
+        <mat-icon>menu_book</mat-icon>
+    </button>
+    <button mat-icon-button
+            class="example-icon"
+            aria-label="Example icon-button with share icon">
+        <mat-icon>add</mat-icon>
+    </button>
+</mat-toolbar>
 <!-- <router-outlet /> -->
 <featured-books></featured-books>
-App Works
