--- a/client/src/app/components/featured-books/featured-books/featured-books.component.html
+++ b/client/src/app/components/featured-books/featured-books/featured-books.component.html
@@ -1,4 +1,4 @@
-<mat-card appearance="outlined">
+<mat-card>
     <mat-card-content>
         <mat-form-field>
             <mat-label>Title or Author Filter</mat-label>
@@ -60,7 +60,7 @@
             <ng-container matColumnDef="checkedOutUntil">
                 <th mat-sort-header
                     mat-header-cell
-                    *matHeaderCellDef> Available On </th>
+                    *matHeaderCellDef> Available </th>
                 <td mat-cell
                     *matCellDef="let book"> {{ (book?.checkedOutUntil | date) ?? 'Now' }} </td>
             </ng-container>
